修复拦截者的相关bug